--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/hugo-devresume-theme"]
 	path = themes/hugo-devresume-theme
 	url = https://github.com/cowboysmall-tools/hugo-devresume-theme.git
+[submodule "nerwinhernando.github.io"]
+	path = nerwinhernando.github.io
+	url = git@github.com:nerwinhernando/nerwinhernando.github.io.git
