--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 # Page settings
 
-baseURL = "https://nerwinhernando.github.io"
+baseURL = "https://nerwinhernando.github.io/"
 languageCode = "en"
 title = ""
 theme = "hugo-devresume-theme"
