--- a/config.toml
+++ b/config.toml
@@ -16,17 +16,20 @@ publishDir = "nerwinhernando.github.io"
     description = "DeveloperResume - Bootstrap 4 Resume/CV Template For Software Developers"
 
 
-    primaryColor = "#54B689"
-    textPrimaryColor = "#292929"
+    #primaryColor = "#54B689"
+    #textPrimaryColor = "#292929"
 
-
+    #primaryColor = "#950740"
+    primaryColor = "#C3073F"
+    textPrimaryColor = "#4E4E50"
 
 
     [params.profile]
         enable = true
         name = "Nerwin Hernando"
         tagline = "Senior Software Engineer"
-        avatar = "avatar.png"
+        #avatar = "avatar.png"
+        avatar = "avatar.jpg"
 
 
 
