--- a/config.toml
+++ b/config.toml
@@ -66,9 +66,13 @@ publishDir = "nerwinhernando.github.io"
         [[params.skills.list]]
         title = "Technical"
         [[params.skills.list.items]]
-        details = "JavaScript/Angular/React/Vue"
+        details = "Unix C++"
         [[params.skills.list.items]]
-        details = "Python/Ruby/PHP"
+        details = "Java"
+        [[params.skills.list.items]]
+        details = "JavaScript/React"
+        [[params.skills.list.items]]
+        details = "Python/Ruby"
         [[params.skills.list.items]]
         details = "Node.js/ASP.NET"
         [[params.skills.list.items]]
@@ -113,7 +117,7 @@ publishDir = "nerwinhernando.github.io"
 
 
     [params.awards]
-        enable = true
+        enable = false
 
         [[params.awards.list]]
         name = "Award Lorem Ipsum"
@@ -172,7 +176,7 @@ publishDir = "nerwinhernando.github.io"
 
     [params.summary]
         enable = true
-        text = "Summarise your career here. Donec quam felis, ultricies nec, pellentesque eu. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.  Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh."
+        text = "Analytical and innovative software developer with 14 years of combined experience. Possesses a higher and more complex level of understanding in designing module and its interface with others. Passionate developer with an appetite for technology. Independent, resourceful, self-reliant, responsible and self-motivated. Love learning and applying design patterns in solving requirements."
 
 
 
@@ -185,50 +189,72 @@ publishDir = "nerwinhernando.github.io"
         enable = true
 
         [[params.experience.list]]
-        title = "Senior Software Engineer"
+        title = "Ruby on Rails Developer"
         dates = "2017 - 2019"
         company = "Assembly Payments"
-        details = "Role description goes here ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Donec pede justo, fringilla vel. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis."
+        #details = "As a developer joining the company without prior professional experience in RoR, I was able to perform my role by using my experience as a polyglot developer."
         [[params.experience.list.items]]
-        details = "Lorem ipsum dolor sit amet, consectetuer."
+        details = "Test Driven Development using Rspec and Jest"
         [[params.experience.list.items]]
-        details = "Aenean commodo ligula eget dolor."
-        [[params.experience.list.items]]
-        details = "Etiam ultricies nisi vel augue."
+        details = "Lead local team in handling our Looker projects which is a tool used for Business Intelligence."
 
         [[params.experience.list]]
         title = "R&D Engineer"
         dates = "2013 - 2017"
         company = "Nokia Networks"
-        details = "Role description goes here ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Donec pede justo, fringilla vel."
+        #details = "Role description goes here ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Donec pede justo, fringilla vel."
         [[params.experience.list.items]]
-        details = "Lorem ipsum dolor sit amet, consectetuer."
+        details = "Developed features of different applications for detecting faults and alarms of equipment for log collection and analysis that are deployed in networks for Big Data and Analytics."
         [[params.experience.list.items]]
-        details = "Aenean commodo ligula eget dolor."
+        details = "Collection of customer data from different operator’s network into Nokia Big Data and Analytics."
+        [[params.experience.list.items]]
+        details = "Handled modules related to Diameter Protocol and its interfaces"
 
         [[params.experience.list]]
         title = "Senior Software Engineer"
         dates = "2010 - 2013"
         company = "Accenture, Inc"
-        details = "Role description goes here ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus."
-
+        [[params.experience.list.items]]
+        details = "Performed creation of technical design documents, detailed design documents, development, unit testing, integration testing and code reviews."
+        [[params.experience.list.items]]
+        details = "Designer for building batch applications written in Visual Basic 6 to process customer data that are scheduled configurately"
         [[params.experience.list]]
         title = "Software Engineer II"
         dates = "2013 - 2014"
         company = "Redmap Networks Asia, Inc"
-        details = "Role description goes here ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus."
+        #details = "Role description goes here ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus."
+        [[params.experience.list.items]]
+        details = "Maintained applications for registering/unregistering Redmap Products."
+        [[params.experience.list.items]]
+        details = "Developed and maintained websites for licensing and automatic updates of Redmap products"
 
         [[params.experience.list]]
         title = "Senior Software Development Engineer"
         dates = "2014 - 2016"
         company = "Alson/AWS ISI"
-        details = "Role description goes here ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus."
+        #details = "Role description goes here ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus."
+        [[params.experience.list.items]]
+        details = "Performed unit testing, component testing, debugging and development."
+        [[params.experience.list.items]]
+        details = "C++ Developer/Debugger/Tester for Multi-Functional Printers (MFP)"
 
         [[params.experience.list]]
         title = "Design Engineer"
         dates = "2013 - 2014"
         company = "Tsukiden Software Philippines, Inc"
-        details = "Role description goes here ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus."
+        #details = "Role description goes here ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus."
+        [[params.experience.list.items]]
+        details = "Designed and developed new features of the simulator for Diameter Protocol"
+        [[params.experience.list.items]]
+        details = "Performed unit and integration testing on modules assigned"
+        [[params.experience.list.items]]
+        details = "Developed scripts for the automation of integration and stability testing"
+        [[params.experience.list.items]]
+        details = "Assisted in all phases of the project life cycle from collecting user requirements, preparing program specifications, coding, testing, and debugging"
+        [[params.experience.list.items]]
+        details = "Managed the porting of SIP application running on Solaris platform to Linux"
+        [[params.experience.list.items]]
+        details = "Test and verify the operability of DoJa using i-mode in various FOMA 3G mobile phones such as N700i (NEC) and F700i (Fujitsu) in Japan"
 
 
 
@@ -244,19 +270,19 @@ publishDir = "nerwinhernando.github.io"
         enable = true
 
         [[params.projects.list]]
-        title = "Project Lorem Ipsum"
-        meta = "Open Source"
-        tagline = "You can use this section for your side projects. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus."
+        title = "JuanaTrip"
+        meta = "Not Open Source"
+        tagline = "Application for booking transportation, accommodation, tour, services. I have built backend REST API’s for each service."
 
         [[params.projects.list]]
-        title = "Project Sed Fringilla"
-        meta = "Open Source"
-        tagline = "You can use this section for your side projects. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim."
+        title = "Prisme"
+        meta = "Not Open Source"
+        tagline = "Prisme General Trading LLC is a young and dynamic company based in Business Bay, Dubai. Supplying high quality products from tableware to guest room supplies and more."
 
         [[params.projects.list]]
-        title = "Project Praesent"
-        meta = "Open Source"
-        tagline = "You can use this section for your side projects. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim."
+        title = "Beep a Ride"
+        meta = "Not Open Source"
+        tagline = "Booking of rental cars."
 
 
 
@@ -268,7 +294,7 @@ publishDir = "nerwinhernando.github.io"
 
 
     [params.information]
-        enable = true
+        enable = false
 
         [[params.information.list]]
         title = "Papers"
@@ -293,15 +319,15 @@ publishDir = "nerwinhernando.github.io"
 
         [[params.social.list]]
         icon = "fab fa-github-square"
-        url = "//github.com/username"
+        url = "//github.com/nerwinhernando"
         title = "username"
         [[params.social.list]]
         icon = "fab fa-linkedin"
-        url = "//linkedin.com/in/username"
+        url = "//linkedin.com/in/nerwin-hernando-95900812/"
         title = "username"
         [[params.social.list]]
         icon = "fab fa-twitter-square"
-        url = "//twitter.com/username"
+        url = "//twitter.com/nerwin_"
         title = "@username"
 
 
